# Endoscopy-AI

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
.specify/: feature.json
docs/: deploy-commands.md  deployment-docker-hub.md  deployment-ngrok.md  live-streaming-workflow.md
frontend/: next.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/docs/: page.tsx
frontend/app/report/: page.tsx
frontend/app/workspace/: page.tsx
frontend/components/: NavBar.tsx  ai-health-badge.tsx  analysis-feedback-control.tsx  browser-capture-live.tsx  confirmed-captures-panel.tsx  disclaimer.tsx  lesion-report-card.tsx  live-captures-panel.tsx  patient-context-form.tsx  pipeline-graph-section.tsx  recordings-panel.tsx  session-summary-panel.tsx  settings-modal.tsx  video-library-panel.tsx  video-source-modal.tsx  zoom-inspect-modal.tsx
frontend/components/session-summary/: chat-tab.tsx  detail-tab.tsx  overview-tab.tsx  shared.ts
frontend/context/: AnalysisContext.tsx
frontend/hooks/: use-live-voice-capture.ts  use-voice-control.ts
frontend/lib/: format.ts  lesion-colors.ts  lesion-report-edits.ts  mst-mapping.ts  recording-upload-store.ts  ui-tokens.ts  ws-client.ts
frontend/tests/: detection-revamp.test.ts  mst-mapping.test.ts
models/: 5_classes_activation_rule.csv  labels.txt
models/region_clf/: labels.txt  stomach_region_labels.txt  uninformative_labels.txt
plans/260505-0947-thesis-defense-slides/: slides.html  thesis-defense-slides.md
plans/260506-0206-speckit-specify-training-slides/: slides.md
plans/260514-1252-progress-report-slides/: slides.md
plans/reports/: design-prompt-260511-0125-ai-endoscopy-ui-redesign.md  engineer-260511-0155-phase-a-llm-build-day.md  engineer-260512-1148-phase-d-detection-actions.md  researcher-260506-0105-gastroeye-pipeline-analysis.md
scripts/: atlas_rag.py  build-kb-embeddings.py  build_reid_dataset.py  eval-endoscopy-vlm.py  eval_voice_intents.py  measure_ablation.py  measure_filters.py  measure_memory.py  vlm_compare.py
scripts/thesis_figures/: deploy_and_run.sh  gen_diagrams.py  gen_qualitative_montage.py  wire_figures.py
specs/005-library-popup-enhance/: spec.md
specs/008-detection-actions-revamp/: spec.md
src/voice/: intent_classifier.py  whisper_transcriber.py
tests/backend/: test_eval_metrics.py  test_kb_rag.py  test_patient_context.py  test_schema_mapping.py
(+29 files in other folders)
