[project]
name = "endoscopy-ai"
version = "0.2.0"
description = "AI-assisted GI endoscopy analysis — real-time YOLO detection, Vietnamese voice control, streaming Vision-LLM clinical insights"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "Academic" }
authors = [{ name = "nanhbui" }]

dependencies = [
    # ── CV pipeline ──────────────────────────────────────────────────────────
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0,<2.0.0",
    "pillow>=10.0.0",

    # ── Speech-to-text ───────────────────────────────────────────────────────
    "faster-whisper>=1.0.0",

    # ── LLM ──────────────────────────────────────────────────────────────────
    "openai>=1.0.0",

    # ── Vector / similarity (negative pattern dedup) ─────────────────────────
    "faiss-cpu>=1.7.4",

    # ── API server ───────────────────────────────────────────────────────────
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",

    # ── Logging + utilities ──────────────────────────────────────────────────
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
    "tiktoken>=0.5.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
# Training-only deps (LLaVA-Med LoRA fine-tuning + Gemini caption generation).
# Install with: uv sync --extra training
training = [
    "peft>=0.7.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "datasets>=2.18.0",
    "bitsandbytes>=0.43.0",
    "google-genai>=0.3.0",
]

# Desktop voice channel — PyAudio + WebRTC VAD. Pip-only on some platforms;
# isolated so the slim API server doesn't pull them.
voice-desktop = [
    "pyaudio>=0.2.13",
    "webrtcvad>=2.0.10",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── Tool config ──────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "data", "models", "new-theme", "frontend", "scripts/gpu_yolo_server.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
